--- a/index.html
+++ b/index.html
@@ -20,9 +20,62 @@
                         <li><button class='loginbtn'
                         onclick="document.getElementById('login-form').style.display='block'"
                     style="width:auto;">Log In</button></li>
-                    </il>
+                    </ul>
                 </nav>
             </div>
-        </div>
+            <div id='login-form' class='login-page'>
+                <div class="form-box">
+                    <div class='button-box'>
+                        <div id='btn'></div>
+                        <button
+                        type='button' onclick='login()' class='toggle-btn'>Log In</button>
+                        <button
+                        type='button' onclick='register()' class='toggle-btn'>Register</button>
+            </div>
+            <form id='login' class='input-group-login'>
+                <input type='text' class='input-field' placeholder='Email Id' required>
+                <input type='password' class='input-field' placeholder='Enter Your Password' required>
+                <input type='checkbox' class='check-box'><span>Remember Password</span>
+                <button type='submit' class='submit-btn'>Log In</button>
+            </form>
+            <form id='register' class='input-group-register'>
+                <input type='text' class='input-field' placeholder='First Name' required>
+                <input type='text' class='input-field' placeholder='Last Name' required>
+                <input type='email' class='input-field' placeholder='Email Id'>
+                <input type='password' class='input-field' placeholder='Enter Your Password' required>
+                <input type='password' class='input-field' placeholder='Confirm Password' required>
+                <input type='checkbox' class='check-box'><span>I have <a href="#">read</a>and agree to the terms and conditions</span>
+                <button type='submit' class='submit-btn'>Register</button>
+            </form>
+        </div>-->
+      </div>
+     </div> 
+     <script>
+         var x=document.getElementById('login');
+         var y=document.getElementById('register');
+         var z=document.getElementById('btn');
+         function register()
+         {
+             x.style.left='-400px';
+             y.style.left='50px';
+             z.style.left='110px';
+         }
+         function login()
+        {
+            x.style.left='50px';
+            y.style.left='450px';
+            z.style.left='0px';
+        }
+     </script>
+     <script>
+         var modal = document.getElementById('login-form');
+         window.onclick = function(event)
+         {
+             if (event.target == modal)
+             {
+                 modal.style.display = "none";
+             }
+         }
+     </script>
     </body>
 </html>
