Changed color of text so that it may be visible

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <input type='email' class='input-field' placeholder='Email Id'>
                 <input type='password' class='input-field' placeholder='Enter Your Password' required>
                 <input type='password' class='input-field' placeholder='Confirm Password' required>
-                <input type='checkbox' class='check-box'><span>I have <a href="#">read</a>and agree to the terms and conditions</span>
+                <input type='checkbox' class='check-box'><span>I have read and agree to the terms and conditions</span>
                 <button type='submit' class='submit-btn'>Register</button>
             </form>
         </div>-->
